// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add className highlight when isHighlighted is true 1`] = `
<button
  className="square highlight"
  onClick={[Function]}
/>
`;

exports[`not add className highlight when isHighlighted is false 1`] = `
<button
  className="square"
  onClick={[Function]}
/>
`;

exports[`show O when the value is O 1`] = `
<button
  className="square"
  onClick={[Function]}
>
  O
</button>
`;

exports[`show X when value is X 1`] = `
<button
  className="square"
  onClick={[Function]}
>
  X
</button>
`;

exports[`show nothing when the value is null 1`] = `
<button
  className="square"
  onClick={[Function]}
/>
`;
